[project]
name = "pretiac"
version = "0.4.1"
description = "pretiac: A PREtty Typed Icinga2 Api Client."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.9,<4"
readme = "README.rst"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/PREtty-Typed-Icinga2-Api-Client_py"

[project.scripts]
pretiac = "pretiac.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.19.1",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.format]
docstring-code-format = true
